# fxapk

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  COMPANION-TOOLS.en.md  COMPANION-TOOLS.md  README.en.md  README.md  build_exe.py  fxapk.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
apkscan/: __init__.py  _pyi_console_entry.py  _pyi_entry.py  _pyi_gui_entry.py  cli.py  selfcheck.py
apkscan/analyzers/: __init__.py  _common.py  admin_panel.py  backend_credential.py  card_merchant.py  certificate.py  classify.py  components.py  config_keys.py  contacts.py  crypto.py  crypto_recipe.py  deeplink_surface.py  endpoints.py  favicon.py  fourth_party_payment.py  ios_plist.py  jadx.py  js_bundle.py  manifest.py  native_obfuscation.py  packing.py  payment.py  permissions.py  re_toolkit.py  remote_config.py  sdk_fingerprint.py  self_hosted_im.py  sensitive_api.py  sms_forwarding.py  wallet_secret.py  webview_jsbridge.py
apkscan/attribution/: __init__.py  assemble.py  graph.py  models.py  roles.py  scorer.py
apkscan/commands/: __init__.py  case.py  corpus.py  graph.py  track.py
apkscan/config/: __init__.py  asset_score.py  chain.py  decode.py  discover.py  fetch.py  models.py  string_graph.py
apkscan/core/: __init__.py  apk.py  appcrypto.py  atomic.py  attribution.py  closure.py  context.py  corpus.py  device.py  diff.py  dotenv.py  enrichment.py  exposure.py  forensic.py  infra.py  integrity.py  ipa.py  jsonl.py  leads.py  models.py  parallel.py  pipeline.py  redact.py  registry.py  report_io.py  snapshot.py  textutil.py  tools.py  utf8.py  walletsecret.py  xmlutil.py
apkscan/dynamic/: __init__.py  auto.py  batch.py  capabilities.py  capability_probe.py  capture.py  capture_plan.py  correlate.py  cryptohook.py  doctor.py  ledger.py  merge.py  pcap_ingest.py  probe_ingest.py  provision.py  repackage.py  socket_attr.py  tshark_backend.py  unpack.py
apkscan/enrichers/: __init__.py  _http.py  _ipinfo.py  asn.py  certs.py  cve.py  dns.py  icp.py  ip_rdap.py  multisource.py  rdap.py  recon.py  shodan.py  webcheck.py  whois.py
apkscan/graph/: __init__.py  ingest.py  query.py  schema.py  store.py  weight.py
apkscan/gui/: __init__.py  controller.py  view.py
apkscan/intel/: __init__.py  models.py
apkscan/network/: __init__.py  categories.py  (+4 more)
docs/: mcp-design.md
tests/: attribution_graph_fakes.py  conftest.py  intel_provider_fakes.py  test_admin_panel.py  test_analyzer_so_windows.py  test_appcrypto.py  test_asset_score.py  test_attack_surface.py  test_attribution.py  test_attribution_cloaking.py  test_attribution_graph_acceptance.py  test_attribution_graph_builder.py  test_attribution_graph_determinism.py  test_attribution_graph_models.py  test_attribution_graph_scope.py  test_attribution_models.py  test_attribution_roles.py  test_attribution_scorer.py  test_auto.py  test_axml_nsmap_shim.py  test_backend_credential.py  test_batch.py  test_capabilities.py  test_capability_probe.py  test_capture.py  test_capture_netstate.py  test_capture_plan.py  test_card_merchant.py  test_case_cli.py  test_certificate.py  test_cli_dynamic.py  test_closure.py  test_components.py  test_config_chain.py  test_config_decode.py  test_config_keys.py  test_contacts.py  test_corpus.py  test_corpus_config_objects.py  test_correlate.py  (+114 more)
(+140 files in other folders)
