[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 发行名 fxapk（PyPI）；CLI 命令 fxapk（保留 apkscan 别名）；内部 import 包仍为 apkscan。
name = "fxapk"
version = "1.1.0"
description = "涉诈 APK 调证分析 CLI — 静态分析 + 配置键值/服务归属提取，产出调证线索清单"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "s-silt" }]
keywords = [
    "android", "apk", "forensics", "fraud", "reverse-engineering",
    "security", "androguard", "调证", "反诈",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
]
dependencies = [
    "androguard>=4.1",
    "jinja2",
    "typer",
    "python-whois",
    "requests",
    "pyyaml",
    "psutil",  # 并行分析器 worker 数按可用内存封顶（pipeline._decide_workers）；缺失则退固定兜底
]

[project.urls]
Homepage = "https://github.com/s-silt/fxapk"
Repository = "https://github.com/s-silt/fxapk"
Issues = "https://github.com/s-silt/fxapk/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]
# PCAP-first 动态解析的深度能力：QUIC Initial 解密 / TLS 密钥派生需 cryptography（androguard 已传递引入，
# 但正常安装不保证；显式声明使 `pip install fxapk[pcap]` 明确锁定该能力）。惰性引入，缺失则优雅降级为仅元数据。
pcap = ["cryptography>=42.0"]
dynamic = ["cryptography>=42.0"]
# 本地案件图谱串案（嵌入式 Kuzu，离线、无第三方依赖）。可选——核心命令不依赖它。
graph = ["kuzu==0.11.3"]
# 线索追踪 + 办案进度的局域网网页（flask）。可选——台账数据层不依赖它，核心命令不依赖它。
track = ["flask"]

[project.scripts]
fxapk = "apkscan.cli:main"
apkscan = "apkscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apkscan*"]

[tool.setuptools.package-data]
apkscan = ["rules/*.yaml", "rules/*.txt", "rules/**/*.yaml", "report/templates/*.j2", "track/templates/*.html"]
# 内置 Frida JS hook 脚本（cryptohook 经 importlib.resources 读取，注入真机）——装后仍可读。
"apkscan.dynamic" = ["frida_js/*.js"]

[tool.pytest.ini_options]
markers = [
    # 重型真 spawn 端到端校验（加载真实 APK + 起进程池，~40s）。默认仍跑（需本地有 *.apk 样本，
    # 否则 skip）；要提速可 `pytest -m "not slow"` 排除。
    "slow: 重型/慢测试（真实 APK + 进程池真 spawn）",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E741：歧义变量名 l —— 测试与推导式里 `for l in leads` 大量使用且可读，忽略此风格项。
ignore = ["E741"]

[tool.pyright]
include = ["apkscan"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# 第三方依赖（androguard 等）无类型存根，缺存根不算错。
reportMissingModuleSource = false
